Add: allure report

--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "description": "",
   "devDependencies": {
     "@cucumber/cucumber": "^12.1.0",
+    "@cucumber/messages": "^28.1.0",
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.15",
+    "allure-cucumberjs": "^3.3.2",
+    "allure-playwright": "^3.3.2",
     "cucumber-html-reporter": "^6.0.0"
   }
 }
