--- a/.github/workflows/front-end-test-adl2025-eq-r-v-g.yml
+++ b/.github/workflows/front-end-test-adl2025-eq-r-v-g.yml
@@ -9,6 +9,13 @@ on:
 jobs:
     ejecute-cucumber-playwright:
         runs-on: ubuntu-latest
+        timeout-minutes: 30
+
+        strategy:
+            fail-fast: false
+            matrix:
+                # Un solo navegador para que sea más rápido
+                browser: [chromium]
 
         steps: 
             # Traer el código a la máquina virtual (market Place) 
@@ -22,8 +29,22 @@ jobs:
             
             - name: Instale las dependencias
               run: npm ci
+            
+            - name: Instale los browser para playwright
+              run: npx playwright install --with-deps
+
+            # 7. Crear directorio para reportes
+            - name: Crear una carpeta para reportes donde se agrupen todos 
+              run: mkdir -p test-results
 
             - name: Ejecuta Cucumber
               run: npx cucumber-js
+
+              env:
+          # Variables específicas para Playwright
+                PLAYWRIGHT_BROWSER: ${{ matrix.browser }}
+                HEADLESS: true
+                CI: true
+
 
 
