--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "description": "",
   "devDependencies": {
     "@cucumber/cucumber": "^12.1.0",
+    "@cucumber/html-formatter": "^21.13.0",
     "@cucumber/messages": "^28.1.0",
+    "@cucumber/pretty-formatter": "^2.0.1",
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.0.15",
     "allure-cucumberjs": "^3.3.2",
