--- a/.github/workflows/front-end-test-adl2025-eq-r-v-g.yml
+++ b/.github/workflows/front-end-test-adl2025-eq-r-v-g.yml
@@ -26,7 +26,7 @@ jobs:
             - name: Instalar Node.js
               uses: actions/setup-node@v4    
               with:
-                node-version: ${{ env.NODE_VERSION }}
+                node-version: "22"
                 cahe: 'npm'
             
             - name: Instale las dependencias
